--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+# --- Python/Backend Rules ---
+venv/
+__pycache__/
+*.pyc
+
+# --- Docker Data ---
+postgres_data/
+
+# --- VSCode General ---
+.vscode
+
 # Logs
 logs
 *.log
