--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,10 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-i18next": "^16.3.5",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.9.5",
     "react-scripts": "5.0.1",
+    "react-syntax-highlighter": "^16.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
