--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
     "react-dom": "^19.2.0",
     "react-i18next": "^16.3.5",
     "react-markdown": "^10.1.0",
-    "react-router-dom": "^7.9.5",
+    "react-router-dom": "^6.30.3",
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^16.1.0",
     "web-vitals": "^2.1.4"
@@ -22,6 +22,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:smoke": "react-scripts test __tests__/smokeTests.test.js --watchAll=false",
+    "test:critical": "react-scripts test __tests__/criticalPath.test.js --watchAll=false",
+    "test:all": "react-scripts test --watchAll=false",
+    "test:coverage": "react-scripts test --coverage --watchAll=false",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
